--- a/TYSelenium/Automation/test-output/old/Default suite/methods.html
+++ b/TYSelenium/Automation/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e88b9c">  <td>19/10/23 19:49:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Listgmail.demoM()[pri:0, instance:testNG.Listgmail@57536d79]">demoM</td> 
-  <td>main@1150538133</td>   <td></td> </tr>
+<tr bgcolor="e88b9c">  <td>19/10/25 15:09:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConfigDemo.demo()[pri:0, instance:testNG.ConfigDemo@6c3708b3]">demo</td> 
+  <td>main@1684890795</td>   <td></td> </tr>
 </table>
